--- a/fr-administration/package.json
+++ b/fr-administration/package.json
@@ -24,11 +24,13 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.1.2",
+    "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
