--- a/fr-administration/package.json
+++ b/fr-administration/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "helmet": "^6.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
