--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
   backend:
     build:
       context: fr-administration
-    ports:
-      - ${BACK_PORT}:3000
     environment:
       - DB_HOST=db
       - DB_USER=${DB_USERNAME}
@@ -23,11 +21,14 @@ services:
       - ./db:/var/lib/postgresql/data
 
   web:
-    image: nginx:1.23.2
+    build:
+      context: nginx
     volumes:
     - ./fr-administration-front:/usr/share/nginx/html
     ports:
     - "${FRONT_PORT}:80"
     environment:
-    - NGINX_HOST=localhost
+    - NGINX_HOST=${HOST}
     - NGINX_PORT=80
+    depends_on:
+      - backend
