--- a/fr-administration-front/Dockerfile
+++ b/fr-administration-front/Dockerfile
@@ -16,7 +16,7 @@ COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist/fr-administration-front /usr/share/nginx/html
 
 # how to build
-# docker build -t web_build .
+# docker build -t front_build .
 
 # how to run
-# docker run -it --rm -d -p 8080:80 --name web web_build 
+# docker run --rm -d -p 8080:80 --name front front_build
