--- a/fr-administration-front/nginx/nginx.conf
+++ b/fr-administration-front/nginx/nginx.conf
@@ -1,5 +1,9 @@
 server {
   listen 80;
+  location /api {
+    rewrite ^/api/(.*)$ /$1 break;
+    proxy_pass http://back:3000;
+  }
   location / {
     root /usr/share/nginx/html;
     index index.html index.htm;
