--- a/fr-administration/Dockerfile
+++ b/fr-administration/Dockerfile
@@ -1,9 +1,14 @@
-FROM node:19
+# FROM node:19 AS prod
 
+# WORKDIR /app
+# COPY . .
+
+# RUN npm install --production
+# RUN npm run build
+# EXPOSE 3000
+# CMD [ "node", "dist/main.js" ]
+
+FROM node:19 AS dev
 WORKDIR /app
-COPY . .
-
-RUN npm install --production
-RUN npm run build
 EXPOSE 3000
-CMD [ "node", "dist/main.js" ]
+CMD [ "npm", "run", "start:dev" ]
