--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,8 +6,6 @@ server {
         proxy_pass http://backend:3000;
     }
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html =404;
+        proxy_pass http://frontend:4200;
     }
 }
