feat: detach db finished

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,19 @@ services:
       - back
   back:
     build: ./fr-administration
-
+    links:
+      - db
+  
   db:
     image: postgres
     restart: always
-    ports:
-      - '5432:5432'
+    # ports:
+    #   - '5432:5432'
     environment:
-      POSTGRES_PASSWORD: dbpassword
-      POSTGRES_USER: dbuser
+      POSTGRES_PASSWORD: example
+
+  adminer:
+    image: adminer
+    restart: always
+    ports: 
+      - 8081:8080
