--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,10 @@ server {
         rewrite  ^/api/(.*) /$1 break;
         proxy_pass http://backend:3000;
     }
+    location /rabbitmq {
+        # rewrite ^/rabbitmq/(.*) /$1 break;
+        proxy_pass http://mom:15672;
+    }
     location / {
         proxy_pass http://frontend:4200;
     }
