--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,11 @@ services:
       - back
   back:
     build: ./fr-administration
-    links:
+    depends_on:
       - db
   
   db:
     image: postgres
     restart: always
-    # ports:
-    #   - '5432:5432'
     environment:
       POSTGRES_PASSWORD: example
-
-  adminer:
-    image: adminer
-    restart: always
-    ports: 
-      - 8081:8080
