--- a/mail/src/main/resources/application.properties
+++ b/mail/src/main/resources/application.properties
@@ -7,3 +7,12 @@ quarkus.mailer.username=fabigoardou@gmail.com
 quarkus.mailer.password=oujflhrvoucositz
 
 quarkus.mailer.mock=false # In dev mode, prevent from using the mock SMTP server
+
+# RABBITMQ
+rabbitmq-host=localhost
+rabbitmq-port=5672 
+rabbitmq-username=fgdou 
+rabbitmq-password=test 
+
+mp.messaging.incoming.mail.connector=smallrye-rabbitmq
+mp.messaging.incoming.mail.queue.name=mail
