--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,7 @@ server {
     }
     location /rabbitmq {
         # rewrite ^/rabbitmq/(.*) /$1 break;
+        proxy_set_header Authorization $http_authorization;
         proxy_pass http://mom:15672;
     }
     location / {
