--- a/fr-administration/Dockerfile
+++ b/fr-administration/Dockerfile
@@ -1,12 +1,12 @@
-# FROM node:19 AS prod
+FROM node:19 AS prod
 
-# WORKDIR /app
-# COPY . .
+WORKDIR /app
+COPY . .
 
-# RUN npm install --production
-# RUN npm run build
-# EXPOSE 3000
-# CMD [ "node", "dist/main.js" ]
+RUN npm install --production
+RUN npm run build
+EXPOSE 3000
+CMD [ "node", "dist/main.js" ]
 
 FROM node:19 AS dev
 WORKDIR /app
