--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ DB_DATABASE=WMproject
 
 FRONT_PORT=8080
 BACK_PORT=3000
-BACK_URL=localhost:8080/api
-FRONT_URL=localhost:8080
+BACK_URL=http://localhost:8080/api
+FRONT_URL=http://localhost:8080
 
 RABBIT_USER=user
 RABBIT_PWD=password
