--- a/fr-administration-front/nginx/nginx.conf
+++ b/fr-administration-front/nginx/nginx.conf
@@ -7,6 +7,7 @@ server {
   location / {
     root /usr/share/nginx/html;
     index index.html index.htm;
+    autoindex on;
     try_files $uri $uri/ /index.html =404;
   }
 }
