--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,57 @@
 services:
+
+  mail:
+    build:
+      context: mail
+      target: prod
+    depends_on:
+      - mom
+
   front:
     build: ./fr-administration-front
-    ports:
-      - '8080:80'
     depends_on:
       - back
+
+
   back:
     build: ./fr-administration
     depends_on:
       - db
+    environment:
+      - DB_HOST=db
+      - DB_USER=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE=${DB_DATABASE}
+      - DB_PORT=5432
   
   db:
     image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_DATABASE}
+      - POSTGRES_USER=${DB_USERNAME}
+    volumes:
+      - ./db:/var/lib/postgresql/data
+
+  proxy:
+    build:
+      context: nginx
+    ports:
+      - "${FRONT_PORT}:80"
+    environment:
+      - NGINX_HOST=${HOST}
+      - NGINX_PORT=80
+    depends_on:
+      - back
+      - front
+
+  mom:
+    hostname: mom
+    image: rabbitmq:3.11.5-management
+    volumes:
+      - ./rabbitmq/core:/var/lib/rabbitmq/
+      - ./rabbitmq/conf:/etc/rabbitmq/
+    environment:
+      - RABBITMQ_DEFAULT_USER=${RABBIT_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBIT_PWD}
