--- a/fr-administration/package.json
+++ b/fr-administration/package.json
@@ -21,27 +21,30 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/microservices": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
+    "amqp-connection-manager": "^4.1.10",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "helmet": "^6.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "sqlite3": "^5.1.2",
     "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.5",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.1.6",
     "@types/bcrypt": "^5.0.0",
@@ -56,7 +59,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
-    "pg": "^8.8.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
