Make docker prod work

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ DB_PASSWORD=esir
 HOST=localhost
 DB_DATABASE=WMproject
 
-FRONT_PORT=8080
+FRONT_PORT=80
 BACK_PORT=3000
-BACK_URL=http://localhost:8080/api
-FRONT_URL=http://localhost:8080
+BACK_URL=http://localhost/api
+FRONT_URL=http://localhost
 
 RABBIT_USER=user
 RABBIT_PWD=password
