--- a/fr-administration/Dockerfile
+++ b/fr-administration/Dockerfile
@@ -1,9 +1,11 @@
 FROM node:19 AS prod
 
 WORKDIR /app
-COPY . .
+COPY package.json package.json
 
+RUN npm install -g @nestjs/cli
 RUN npm install --production
+COPY . .
 RUN npm run build
 EXPOSE 3000
 CMD [ "node", "dist/main.js" ]
