--- a/fr-administration-front/nginx/nginx.conf
+++ b/fr-administration-front/nginx/nginx.conf
@@ -4,6 +4,10 @@ server {
     rewrite ^/api/(.*)$ /$1 break;
     proxy_pass http://back:3000;
   }
+  location /rabbitmq {
+    proxy_set_header Authorization $http_authorization;
+    proxy_pass http://mom:15672;
+  }
   location / {
     root /usr/share/nginx/html;
     index index.html index.htm;
