--- a/fr-administration-front/Dockerfile
+++ b/fr-administration-front/Dockerfile
@@ -1,4 +1,4 @@
-FROM node as build
+FROM node:19 as build
 
 WORKDIR /app
 
@@ -15,8 +15,12 @@ FROM nginx as prod
 COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist/fr-administration-front /usr/share/nginx/html
 
-# how to build
-# docker build -t front_build .
+FROM node:19 as dev
 
-# how to run
-# docker run --rm -d -p 8080:80 --name front front_build
+WORKDIR /app
+
+COPY ./package.json ./package.json
+COPY ./yarn.lock ./yarn.lock
+RUN yarn install
+COPY . .
+CMD [ "yarn", "run", "start" ]
