--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,10 @@ server {
         rewrite  ^/api/(.*) /$1 break;
         proxy_pass http://back:3000;
     }
+    location /adminer {
+        rewrite  ^/adminer/(.*) /$1 break;
+        proxy_pass http://adminer:8080;
+    }
     location /rabbitmq {
         # rewrite ^/rabbitmq/(.*) /$1 break;
         proxy_set_header Authorization $http_authorization;
