--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -59,3 +59,6 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=${RABBIT_USER}
       - RABBITMQ_DEFAULT_PASS=${RABBIT_PWD}
+
+  adminer:
+    image: adminer
