--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,10 @@ server {
         rewrite  ^/adminer/(.*) /$1 break;
         proxy_pass http://adminer:8080;
     }
+    location /maildev {
+        rewrite  ^/maildev/(.*) /$1 break;
+        proxy_pass http://smtp:1080;
+    }
     location /rabbitmq {
         # rewrite ^/rabbitmq/(.*) /$1 break;
         proxy_set_header Authorization $http_authorization;
