--- a/mail/src/main/resources/application.properties
+++ b/mail/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
 quarkus.mailer.from=fabigoardou@gmail.com
-quarkus.mailer.host=smtp.gmail.com
-quarkus.mailer.port=587
-quarkus.mailer.start-tls=REQUIRED
-quarkus.mailer.username=fabigoardou@gmail.com
-quarkus.mailer.password=oujflhrvoucositz
+quarkus.mailer.host=smtp
+quarkus.mailer.port=1025
 
 quarkus.mailer.mock=false # In dev mode, prevent from using the mock SMTP server
 
