--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   mail:
     build:
       context: mail
-      target: dev
+      target: prod
     depends_on:
       - mom
 
@@ -15,6 +15,7 @@ services:
   proxy:
     build:
       context: nginx
+      target: prod
     ports:
       - ${FRONT_PORT}:80
     depends_on:
@@ -50,7 +51,6 @@ services:
     hostname: mom
     image: rabbitmq:3.11.5-management
     volumes:
-      - ./rabbitmq/core:/var/lib/rabbitmq/
       - ./rabbitmq/conf:/etc/rabbitmq/
     environment:
       - RABBITMQ_DEFAULT_USER=${RABBIT_USER}
