--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -5,6 +5,10 @@ server {
         rewrite  ^/api/(.*) /$1 break;
         proxy_pass http://back:3000;
     }
+    location /adminer {
+        rewrite  ^/adminer/(.*) /$1 break;
+        proxy_pass http://adminer:8080;
+    }
     location /maildev {
         rewrite  ^/maildev/(.*) /$1 break;
         proxy_pass http://smtp:1080;
