--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,16 +1,25 @@
 services:
 
   mail:
+    build:
+      context: mail
+      target: prod
     image: fgdou/wm-project-mail
     depends_on:
       - mom
 
   front:
+    build:
+      context: ./fr-administration-front
+      target: prod
     image: fgdou/wm-project-front
 
   proxy:
+    build:
+      context: nginx
+      target: prod
     ports:
-      - 80:80
+      - ${FRONT_PORT}:80
     depends_on:
       - front
       - back
@@ -18,14 +27,17 @@ services:
 
 
   back:
+    build:
+      context: ./fr-administration
+      target: prod
     depends_on:
       - db
       - mom
     environment:
       - DB_HOST=db
-      - DB_USER=user
-      - DB_PASSWORD=esir
-      - DB_DATABASE=WMproject
+      - DB_USER=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE=${DB_DATABASE}
       - DB_PORT=5432
     image: fgdou/wm-project-back
   
@@ -33,9 +45,9 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_PASSWORD=esir
-      - POSTGRES_DB=WMproject
-      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_DATABASE}
+      - POSTGRES_USER=${DB_USERNAME}
     volumes:
       - ./db:/var/lib/postgresql/data
 
@@ -45,8 +57,8 @@ services:
     volumes:
       - ./rabbitmq/conf:/etc/rabbitmq/
     environment:
-      - RABBITMQ_DEFAULT_USER=user
-      - RABBITMQ_DEFAULT_PASS=password
+      - RABBITMQ_DEFAULT_USER=${RABBIT_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBIT_PWD}
 
   smtp:
     image: maildev/maildev:2.0.5
