--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -19,6 +19,9 @@ server {
         proxy_pass http://mom:15672;
     }
     location / {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_pass http://front:4200;
     }
 }
