ADD grafana and prometheus

--- a/mail/pom.xml
+++ b/mail/pom.xml
@@ -58,6 +58,10 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
