--- a/fr-administration/package.json
+++ b/fr-administration/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
+    "@willsoto/nestjs-prometheus": "^5.1.0",
     "amqp-connection-manager": "^4.1.10",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
@@ -37,6 +38,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "8.8.0",
+    "prom-client": "^14.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
