--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -18,6 +18,15 @@ server {
         proxy_set_header Authorization $http_authorization;
         proxy_pass http://mom:15672;
     }
+    location /grafana {
+        proxy_set_header Host $http_host;
+        rewrite  ^/grafana/(.*) /$1 break;
+        proxy_pass http://grafana:3000;
+    }
+    location /prometheus {
+        rewrite  ^/prometheus/(.*) /$1 break;
+        proxy_pass http://prometheus:9090;
+    }
     location / {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
