--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,3 +53,36 @@ services:
   smtp:
     image: maildev/maildev:2.0.5
     restart: always
+
+  grafana:
+    image: grafana/grafana:9.3.2
+    environment:
+      - UID=${UID}
+      - GID=${GID}
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PWD}
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
+    volumes:
+      - ./grafana/dashboard.yml:/etc/grafana/provisioning/dashboards/dashboard.yaml
+      - ./grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yaml
+      - ./grafana/dashboards/:/var/lib/grafana/dashboards
+      - ./grafana/config.ini:/etc/grafana/grafana.ini
+    user: "${UID}:${GID}"
+
+  prometheus:
+    image: bitnami/prometheus:2.41.0
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --web.external-url=/prometheus/
+      - --web.route-prefix=/
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus/data:/opt/bitnami/prometheus/data
+    user: "${UID}:${GID}"
+    environment:
+      - UID=${UID}
+      - GID=${GID}
+    depends_on:
+      - mom
+      - back
+      - mail
