--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -26,3 +26,11 @@ scrape_configs:
       - targets: ['back:3000']
         labels:
           group: 'production'
+  - job_name: 'k6_exporter'
+    static_configs:
+    - targets: ['k6export:9102']
+      labels: 
+        group: 'production'
+    metric_relabel_configs:
+    - regex: '(job|instance|url)'
+      action: labeldrop
