--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -98,7 +98,7 @@ services:
       - k6export
   
   k6:
-    image: ./k6
+    build: ./k6
     ports:
       - "${K6_PORT}:6565"
     environment:
@@ -115,7 +115,7 @@ services:
       - back
 
   k6export:
-    image: ./k6export
+    build: ./k6export
     ports:
       - ${K6_EXPORT_PORT}:9102
       - ${K6_SEND_PORT}:9125 
