--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -74,7 +74,7 @@ services:
     volumes:
       - ./grafana/dashboard.yml:/etc/grafana/provisioning/dashboards/dashboard.yaml
       - ./grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yaml
-      - ./grafana/dashboards/:/var/lib/grafana/dashboards
+      - ./grafana/dashboards/:/var/lib/grafana
       - ./grafana/config.ini:/etc/grafana/grafana.ini
     user: "${UID}:${GID}"
 
