--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -82,7 +82,7 @@ services:
     volumes:
       - ./grafana/dashboard.yml:/etc/grafana/provisioning/dashboards/dashboard.yaml
       - ./grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yaml
-      - ./grafana/dashboards/:/var/lib/grafana
+      - ./grafana/dashboards/:/var/lib/grafana/dashboards
       - ./grafana/config.ini:/etc/grafana/grafana.ini
     user: "${UID}:${GID}"
 
