UPDATE doc run and services

--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ FRONT_URL=http://localhost
 
 RABBIT_USER=user
 RABBIT_PWD=password
+RABBIT_QUEUE=mail
+RABBIT_HOST=mom
+RABBIT_PORT=5672
 
 GRAFANA_USER=user
 GRAFANA_PWD=password
