--- a/mail/src/main/resources/application.properties
+++ b/mail/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
-quarkus.mailer.from=fabigoardou@gmail.com
-quarkus.mailer.host=smtp
-quarkus.mailer.port=1025
+quarkus.mailer.from=${EMAIL_FROM}
+quarkus.mailer.host=${EMAIL_HOST}
+quarkus.mailer.port=${EMAIL_PORT}
 
 quarkus.mailer.mock=false # In dev mode, prevent from using the mock SMTP server
 
 # RABBITMQ
-rabbitmq-host=mom
-rabbitmq-port=5672 
-rabbitmq-username=user
-rabbitmq-password=password
+rabbitmq-host=${RABBIT_HOST}
+rabbitmq-port=${RABBIT_PORT}
+rabbitmq-username=${RABBIT_USER}
+rabbitmq-password=${RABBIT_PWD}
 mp.messaging.incoming.mail.connector=smallrye-rabbitmq
-mp.messaging.incoming.mail.queue.name=mail
+mp.messaging.incoming.mail.queue.name=${RABBIT_QUEUE}
