feat: add test type to env

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ RABBIT_PWD=password
 
 GRAFANA_USER=user
 GRAFANA_PWD=password
+
+K6_TEST_TYPE=stress_test # options : smoke_test, load_test, soak_test, stress_test
